Another attempt to fix nav buttons on mobile homepage

--- a/style.css
+++ b/style.css
@@ -282,7 +282,10 @@ padding: 0 16px;
 
 }
 
-
+.hero {
+max-width: 100%;
+overflow: hidden;
+}
 
 
 
